Split multi-variable declarations and clamp with Math.clamp
A readability pass over the declarations and clamps, plus two dead members
it exposed.

Comma-separated declarations become one declaration per line: the six band
arrays in SignalState, FMIN/FMAX in Engine, DB_TOP/DB_BOT and the four
PAD_* constants in Draw, the five header Labels in MainApp, the two
SourceCards in ControlRail, mouseX/mouseY in AnalyzerView, and the local
accumulators in getStats, signalStatus and the two transfer-curve helpers.
A shared type on one line saves nothing and hides the individual names
from a skim. Related groups stay adjacent and are separated by a blank
line, so avgMic/avgSolo, dispMic/dispSolo and holdMic/holdSolo still read
as three pairs rather than six loose fields. A handful of two-variable
locals elsewhere are left for a follow-up.

Nested Math.max(lo, Math.min(hi, v)) becomes Math.clamp(v, lo, hi) in
AudioDsp, Engine, Draw and Meter — the clearer spelling of what those call
sites were open-coding, with the value first and the bounds after. Three
sites are deliberately left alone: ControlRail's prominence clamp and the
two label-position clamps in Draw. The latter two compute their upper
bound from the window width, and Math.clamp throws IllegalArgumentException
when min exceeds max, where the nested form silently returns the lower
bound. In a narrow enough window that is a per-frame exception in the
render loop, so converting them needs a bounds check first.

Blank lines are added inside methods to separate guard clauses, loops and
the closing return from the work around them. The Eclipse profile
preserves blank lines but never inserts them, so grouping stays an
authoring decision. Single-line Javadoc in Engine is expanded to block
form to match the file's longer entries.

Two unused members go, both in code where the initialiser had to survive:

- Fonts.LOADED counted successfully registered faces and nobody read the
  count, but loadBundled() must still run before MO